update: todo model und swagger docs
